<?xml version="1.0"?>
<package format="2">
  <name>flir_msgs</name>
  <version>0.0.1</version>
  <description>The flir_msgs package</description>
  <maintainer email="tahir.mehmood@mybotshop.de">Tahir Mehmood</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend> 
  <depend>std_msgs</depend>
  <export>
  </export>
</package>
