<?xml version="1.0"?>
<package format="3">
  <name>flir_msgs</name>
  <version>0.0.1</version>
  <description>The flir_msgs package</description>
  <license>MIT</license>
  <author email="tahir.mehmood@mybotshop.de">Tahir Mehmood</author>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>                               
   <build_type>ament_cmake</build_type> 
  </export> 
</package>
