<?xml version="1.0"?>
<package format="2">
  <name>flir_smart_camera_driver</name>
  <version>0.0.1</version>
  <description>The flir_smart_camera_driver package</description>
  <maintainer email="tahir.mehmood@mybotshop.de">Tahir Mehmood</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>flir_msgs</depend>
  <export>
  </export>
</package>