<?xml version="1.0"?>
<package format="3">
  <name>flir_smart_camera_driver</name>
  <version>0.0.1</version>
  <description>The flir_smart_camera_driver package</description>
  <license>MIT</license>

  <author email="tahir.mehmood@mybotshop.de">Tahir Mehmood</author>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>flir_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
